# Server-Backend

./: .env_example  .gitignore  README.md  chown_workspace_files.sh  docker-compose.yml  show_logs_docker_compose.sh  start_ad_server.sh
ad_fast_api/: .gitignore  ad_fast_api.Dockerfile  pyproject.toml  requirements.txt
ad_fast_api/ad_animated_drawings/: .gitignore  ad_animated_drawings.Dockerfile  rpc_server.py  test_rpc_server.py
ad_fast_api/ad_fast_api/: .gitignore  ad_fast_api.Dockerfile  main.py  pyproject.toml
ad_fast_api/ad_fast_api/api/: configure_animation.py
ad_fast_api/ad_fast_api/api/make_ad/: step1.py  step3.py  step4.py
ad_fast_api/ad_fast_api/configuration/sources/: config_dir.py
ad_fast_api/ad_fast_api/domain/: schema.py
ad_fast_api/ad_fast_api/domain/error_handling/: exception_handlers.py
ad_fast_api/ad_fast_api/error_handling/: middleware.py
ad_fast_api/ad_fast_api/locust/: locust_configure_character_joints.py  locust_configure_skeleton.py  locust_cutout_character.py  locust_find_character.py  locust_make_animation.py  locust_ping.py  locust_upload_drawing.py  ws_client.py
ad_fast_api/ad_fast_api/locust/locust_helper/: ws_client.py
ad_fast_api/ad_fast_api/snippets/sources/: ad_dictionary.py  ad_http_exception.py  ad_logger.py  ad_test.py  ad_time.py  ad_websocket.py  logger.py  save_image.py
ad_fast_api/ad_fast_api/snippets/testings/: mock_ad_websocket.py  mock_logger.py
ad_fast_api/ad_fast_api/snippets/tests/: logger_test.py  test_ad_dictionary.py  test_ad_env.py  test_ad_logger.py  test_ad_websocket.py  (+1 more)
ad_fast_api/ad_torchserve/: ad_torchserve.Dockerfile  config.properties
ad_fast_api/animated_drawings/: rpc_server.py
ad_fast_api/locust/: locust_find_character.py
ad_fast_api/torchserve/: config.properties  torchserve.Dockerfile
(+225 files in other folders)
